null_code/build/log/idf_py_stdout_output_216991
Command: ninja all
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/jadenv/Documents/NULL/null_code/build/bootloader/esp-idf/esptool_py && /home/jadenv/.espressif/python_env/idf5.5_py3.12_env/bin/python /home/jadenv/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/jadenv/Documents/NULL/null_code/build/bootloader/bootloader.bin
Bootloader binary size 0x5160 bytes. 0x2ea0 bytes (36%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/GPIO.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/GPIO.c.obj 
/home/jadenv/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20251107/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.3\" -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/jadenv/Documents/NULL/null_code/build/config -I/home/jadenv/Documents/NULL/null_code/main -I/home/jadenv/esp/esp-idf/components/newlib/platform_include -I/home/jadenv/esp/esp-idf/components/freertos/config/include -I/home/jadenv/esp/esp-idf/components/freertos/config/include/freertos -I/home/jadenv/esp/esp-idf/components/freertos/config/xtensa/include -I/home/jadenv/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/jadenv/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/jadenv/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/jadenv/esp/esp-idf/components/freertos/esp_additions/include -I/home/jadenv/esp/esp-idf/components/esp_hw_support/include -I/home/jadenv/esp/esp-idf/components/esp_hw_support/include/soc -I/home/jadenv/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/jadenv/esp/esp-idf/components/esp_hw_support/dma/include -I/home/jadenv/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/jadenv/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/jadenv/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/jadenv/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/jadenv/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/jadenv/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/jadenv/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/jadenv/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -I/home/jadenv/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -I/home/jadenv/esp/esp-idf/components/heap/include -I/home/jadenv/esp/esp-idf/components/heap/tlsf -I/home/jadenv/esp/esp-idf/components/log/include -I/home/jadenv/esp/esp-idf/components/soc/include -I/home/jadenv/esp/esp-idf/components/soc/esp32s3 -I/home/jadenv/esp/esp-idf/components/soc/esp32s3/include -I/home/jadenv/esp/esp-idf/components/soc/esp32s3/register -I/home/jadenv/esp/esp-idf/components/hal/platform_port/include -I/home/jadenv/esp/esp-idf/components/hal/esp32s3/include -I/home/jadenv/esp/esp-idf/components/hal/include -I/home/jadenv/esp/esp-idf/components/esp_rom/include -I/home/jadenv/esp/esp-idf/components/esp_rom/esp32s3/include -I/home/jadenv/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/home/jadenv/esp/esp-idf/components/esp_rom/esp32s3 -I/home/jadenv/esp/esp-idf/components/esp_common/include -I/home/jadenv/esp/esp-idf/components/esp_system/include -I/home/jadenv/esp/esp-idf/components/esp_system/port/soc -I/home/jadenv/esp/esp-idf/components/esp_system/port/include/private -I/home/jadenv/esp/esp-idf/components/xtensa/esp32s3/include -I/home/jadenv/esp/esp-idf/components/xtensa/include -I/home/jadenv/esp/esp-idf/components/xtensa/deprecated_include -I/home/jadenv/esp/esp-idf/components/lwip/include -I/home/jadenv/esp/esp-idf/components/lwip/include/apps -I/home/jadenv/esp/esp-idf/components/lwip/include/apps/sntp -I/home/jadenv/esp/esp-idf/components/lwip/lwip/src/include -I/home/jadenv/esp/esp-idf/components/lwip/port/include -I/home/jadenv/esp/esp-idf/components/lwip/port/freertos/include -I/home/jadenv/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/jadenv/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/jadenv/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/jadenv/esp/esp-idf/components/esp_driver_i2c/include -I/home/jadenv/esp/esp-idf/components/esp_lcd/include -I/home/jadenv/esp/esp-idf/components/esp_lcd/interface -I/home/jadenv/esp/esp-idf/components/esp_lcd/rgb/include -I/home/jadenv/esp/esp-idf/components/driver/deprecated -I/home/jadenv/esp/esp-idf/components/driver/i2c/include -I/home/jadenv/esp/esp-idf/components/driver/touch_sensor/include -I/home/jadenv/esp/esp-idf/components/driver/twai/include -I/home/jadenv/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/jadenv/esp/esp-idf/components/esp_pm/include -I/home/jadenv/esp/esp-idf/components/esp_ringbuf/include -I/home/jadenv/esp/esp-idf/components/esp_driver_gpio/include -I/home/jadenv/esp/esp-idf/components/esp_driver_pcnt/include -I/home/jadenv/esp/esp-idf/components/esp_driver_gptimer/include -I/home/jadenv/esp/esp-idf/components/esp_driver_spi/include -I/home/jadenv/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/jadenv/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/jadenv/esp/esp-idf/components/esp_driver_i2s/include -I/home/jadenv/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/jadenv/esp/esp-idf/components/sdmmc/include -I/home/jadenv/esp/esp-idf/components/esp_driver_sdspi/include -I/home/jadenv/esp/esp-idf/components/esp_driver_sdio/include -I/home/jadenv/esp/esp-idf/components/esp_driver_dac/include -I/home/jadenv/esp/esp-idf/components/esp_driver_rmt/include -I/home/jadenv/esp/esp-idf/components/esp_driver_tsens/include -I/home/jadenv/esp/esp-idf/components/esp_driver_sdm/include -I/home/jadenv/esp/esp-idf/components/esp_driver_uart/include -I/home/jadenv/esp/esp-idf/components/vfs/include -I/home/jadenv/esp/esp-idf/components/esp_driver_ledc/include -I/home/jadenv/esp/esp-idf/components/esp_driver_parlio/include -I/home/jadenv/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/jadenv/esp/esp-idf/components/esp_driver_twai/include -I/home/jadenv/esp/esp-idf/components/esp_wifi/include -I/home/jadenv/esp/esp-idf/components/esp_wifi/include/local -I/home/jadenv/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/jadenv/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/jadenv/esp/esp-idf/components/esp_event/include -I/home/jadenv/esp/esp-idf/components/esp_phy/include -I/home/jadenv/esp/esp-idf/components/esp_phy/esp32s3/include -I/home/jadenv/esp/esp-idf/components/esp_netif/include -I/home/jadenv/esp/esp-idf/components/esp_timer/include -I/home/jadenv/Documents/NULL/null_code/managed_components/espressif__esp_lvgl_port/include -I/home/jadenv/Documents/NULL/null_code/managed_components/lvgl__lvgl -I/home/jadenv/Documents/NULL/null_code/managed_components/lvgl__lvgl/src -I/home/jadenv/Documents/NULL/null_code/managed_components -I/home/jadenv/Documents/NULL/null_code/managed_components/lvgl__lvgl/examples -I/home/jadenv/Documents/NULL/null_code/managed_components/lvgl__lvgl/demos -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/jadenv/Documents/NULL/null_code=. -fmacro-prefix-map=/home/jadenv/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/GPIO.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/GPIO.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/GPIO.c.obj -c /home/jadenv/Documents/NULL/null_code/main/GPIO.c
/home/jadenv/Documents/NULL/null_code/main/GPIO.c: In function 'init_buttons':
/home/jadenv/Documents/NULL/null_code/main/GPIO.c:23:48: error: expected expression before 'void'
   23 |                 gpio_isr_handler_add(GPIOS[i], void(void*)(void*)&gpio_handler_function, (void*)&GPIOS[i]);
      |                                                ^~~~
/home/jadenv/Documents/NULL/null_code/main/GPIO.c:23:17: error: too few arguments to function 'gpio_isr_handler_add'
   23 |                 gpio_isr_handler_add(GPIOS[i], void(void*)(void*)&gpio_handler_function, (void*)&GPIOS[i]);
      |                 ^~~~~~~~~~~~~~~~~~~~
In file included from /home/jadenv/Documents/NULL/null_code/main/GPIO.h:4,
                 from /home/jadenv/Documents/NULL/null_code/main/GPIO.c:1:
/home/jadenv/esp/esp-idf/components/esp_driver_gpio/include/driver/gpio.h:341:11: note: declared here
  341 | esp_err_t gpio_isr_handler_add(gpio_num_t gpio_num, gpio_isr_t isr_handler, void *args);
      |           ^~~~~~~~~~~~~~~~~~~~
In file included from /home/jadenv/Documents/NULL/null_code/main/GPIO.h:3:
/home/jadenv/Documents/NULL/null_code/main/utility.h: At top level:
/home/jadenv/Documents/NULL/null_code/main/utility.h:21:30: warning: 'current' defined but not used [-Wunused-variable]
   21 | static struct current_state* current = NULL;
      |                              ^~~~~~~
/home/jadenv/Documents/NULL/null_code/main/utility.h:20:20: warning: 'display' defined but not used [-Wunused-variable]
   20 | static lv_disp_t * display = NULL;
      |                    ^~~~~~~
ninja: build stopped: subcommand failed.
